[tool.poetry]
name = "labeling-solver"
version = "0.1.0"
description = ""
authors = ["peoh <p.o.maxado@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.2.9972"
black = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
